--- a/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/editor/red_packet_participances.html
@@ -24,6 +24,14 @@
 				<label class="">用户名：</label>
 				<input type="text" class="form-control" id="participant_name" name="participant_name" value="" />
 			</div>
+			<div class="xui-i-item">
+                <label>红包状态</label>
+                <select class="" id="red_packet_status" name="red_packet_status">
+                    <option value="-1">全部</option>
+                    <option value="1">成功</option>
+                    <option value="0">失败</option>
+                </select>
+            </div>
 		</div>
 		<div class="xui-i-col">
 			<div class="xui-i-item ml10">
@@ -56,11 +64,11 @@
 					data-min-el="#start_time"/>
 			</div>
 			<div class="xui-i-item ml10">
-                <label>å‘æ”¾çŠ¶æ€ï¼š</label>
+                <label>发放状态</label>
                 <select class="" id="is_already_paid" name="is_already_paid">
-                    <option value="-1">å…¨éƒ¨</option>
-                    <option value="1">å‘æ”¾</option>
-                    <option value="0">æœªå‘æ”¾</option>
+                    <option value="-1">全部</option>
+                    <option value="1">成功</option>
+                    <option value="0">失败</option>
                 </select>
             </div>
 		</div>
@@ -76,9 +84,9 @@
 	<div class="panel panel-default xui-tableBox">
 		<div class="panel-heading">
 			<label for="topSelectAll" class="xui-selectAll ml15">
-				<input type="checkbox" id="topSelectAll" class="xa-selectAll">å…¨é€‰
+				<input type="checkbox" id="topSelectAll" class="xa-selectAll">全选
 			</label>
-			<a href="javascript:void(0);" class="ml10 xa-send-selected">æ‰¹é‡å‘æ”¾</a>
+			<a href="javascript:void(0);" class="ml10 xa-send-selected">批量发放</a>
 		</div>
 		<div 
 			class="panel-body panel-table p0 mt10"
