--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -28,7 +28,7 @@
                         </span>
                     </div>
                     <div class="wui-i-rules-contentbox">
-                        <div class="wui-i-closebtn">
+                        <div class="wui-i-closebtn xa-i-closebtn">
                             ×
                         </div>
                         <div class="wui-i-rules-content">
@@ -55,12 +55,12 @@
             </div>
             <div class="wui-i-powerbar_group">
                 <div class="wui-i-box">
-                    <div class="wui-i-percentbox">
+                    <div class="wui-i-percentbox xa-i-percentbox">
                         0%
                     </div>
                 </div>
                 <div class="wui-i-bar">
-                 <div class="wui-i-bar_process"></div>
+                 <div class="wui-i-bar_process xa-i-bar_process"></div>
                 </div>
                 <div class="wui-i-power_money wa-i-red_packet_money">
                     <p>总金额0.00元</p>
