--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -81,6 +81,7 @@
                 </div>
             </div>
             <div class="wui-i-btngroup">
+                <button class="wui-i-btn-running wa-running">邀请好友 帮我拼红包</button>
                 <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
                 <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
                 <button class="wui-i-btn-power wa-power wui-hide"><span class="wa-power-btn-action">帮</span><span class="wa-mobile_solution">asdasda</span><span>点赞</span></button>
