--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -80,14 +80,17 @@
                     &nbsp &nbsp &nbsp 天 &nbsp &nbsp 时  &nbsp  &nbsp 分  &nbsp  &nbsp 秒
                 </div>
             </div>
-            <div class="wui-i-btngroup">
+            <div class="wui-i-btngroup none">
                 <button class="wui-i-btn-running wa-running">邀请好友 帮我拼红包</button>
                 <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
                 <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
                 <button class="wui-i-btn-power wa-power wui-hide"><span class="wa-power-btn-action">帮</span><span class="wa-mobile_solution">asdasda</span><span>点赞</span></button>
                 <button class="wui-i-btn-using wa-using wui-hide">我也要参加</button>
             </div>
+            <!-- 成功消息 -->
+            <div class="wui-i-system_msgbox wa-i-system_msgbox">
 
+            </div>
             <div class="wui-i-states">
                 <div class="wui-i-title" style="text-align: center;color:white;font-weight:normal;">
                     <span class="wui-i-helper-title-content">
