--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -21,18 +21,18 @@
         <div class="wui-i-body">
             <div class="wui-i-help_group">
                 <div class="wui-i-shop_circle"></div>
-                <div class="wui-i-rules xa-rules none">
-                    <div class="wui-i-title">
-                        <span class="wui-i-rules-title-content">
+                <div class="wui-i-rules xa-rules">
+                    <div class="wui-i-title xa-i-title">
+                        <span class="wui-i-rules-title-content xa-i-rules-title-content">
                             <i class="wui-i-star"></i><p>活动规则</p><i class="wui-i-star"></i>
                         </span>
                     </div>
-                    <div class="wui-i-rules-contentbox">
+                    <div class="wui-i-rules-contentbox xa-i-rules-contentbox">
                         <div class="wui-i-closebtn xa-i-closebtn">
                             ×
                         </div>
-                        <div class="wui-i-rules-content">
-                            <div class="wui-i-title-box">
+                        <div class="wui-i-rules-content xa-i-rules-content">
+                            <div class="wui-i-title-box xa-i-title-box">
                                 <p class="wui-i-title">活动规则</p>
                             </div>
                             {{component.model.rules|safe}}
