--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -27,7 +27,7 @@
                             <i class="wui-i-star"></i><p>活动规则</p><i class="wui-i-star"></i>
                         </span>
                     </div>
-                    <div class="wui-i-rules-contentbox xa-i-rules-contentbox">
+                    <div class="wui-i-rules-contentbox xa-i-rules-contentbox none">
                         <div class="wui-i-closebtn xa-i-closebtn">
                             ×
                         </div>
