--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -86,7 +86,7 @@
                 <button class="wui-i-btn-running wa-running wui-hide">邀请好友 帮我拼红包</button>
                 <button class="wui-i-btn-closed wa-closed wui-hide">活动已结束</button>
                 <button class="wui-i-btn-notready wa-notready wui-hide">活动尚未开启,敬请期待</button>
-                <button class="wui-i-btn-power wa-power wui-hide"><span class="wa-power-btn-action">帮</span><span class="wa-mobile_solution">asdasda</span><span>点赞</span></button>
+                <button class="wui-i-btn-power wa-power wui-hide"><b class="wa-power-btn-action">帮</b><b class="wa-mobile_solution">asdasda</b><b>点赞</b></button>
                 <button class="wui-i-btn-using wa-using wui-hide">我也要参加</button>
             </div>
             <!-- 成功消息 -->
