添加一下（目前为止支持一般安卓手机w:360）iPhone，（注意：ipad没有匹配）

--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -236,6 +236,12 @@
 /*iphone6p*/
 @media (orientation: portrait) and (min-width: 410px) and (max-width: 430px){
     /*红包*/
+    .wui-red_packet-container {
+        position: relative;
+        background-color: #B90000;
+        height: auto;
+        padding-bottom: 5rem;
+    }
     .wui-red_packet-container .wui-i-userinfo_group {
         position: absolute;
         width: 100%;
