--- a/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
+++ b/weapp/apps/customerized_apps/lottery/templates/webapp/m_lottery.html
@@ -222,6 +222,11 @@
                 this.$contentHeader.html("没有中奖，再接再厉吧~");
                 this.$userCenter.show();
                 this.$closeBtn.show();
+            }else if(prize_type == 'none'){
+                this.$title.html('很遗憾').show();
+                this.$contentHeader.html("奖品已抽光,下次请早点来!");
+                this.$userCenter.hide();
+                this.$closeBtn.show();
             }else if(prize_type == 'coupon' || prize_type == 'integral'){
                 this.$title.html('中奖了耶').show();
                 var msg = prize_type == 'coupon' ? '一张优惠券' : '积分奖励';
@@ -252,14 +257,6 @@
                 mask('show');
                 that.$el.show();
             }
-        };
-        ResultDialog.prototype._none = function(){
-            this.$entityContent.hide();
-            this.$el.hide();
-            this.$title.html('很遗憾').show();
-            this.$contentHeader.html("奖品已抽光,下次请早点来!");
-            this.$userCenter.show();
-            this.$closeBtn.show();
         };
         ResultDialog.prototype.close = function(){
             //this.$mask.hide();
@@ -421,8 +418,11 @@
                         },
                         error: function(error){
                             $that.removeClass('xa-lottery-go-to');
-                            if(error.errMsg == '很遗憾！奖品已抽光，下次请早点来！'){
-                                resultDialog._none();
+                            if(error.errMsg == '奖品已抽光'){
+                                resultDialog.render({
+                                    prize_type: 'none',
+                                    prize_name: ''
+                                });
                             }else{
                                 wuiAlert(error.errMsg);
                             }
