--- a/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
+++ b/weapp/apps/customerized_apps/red_packet/templates/webapp/m_red_packet.html
@@ -864,6 +864,7 @@
     function openRunoutWin(){
         mask('show');
         $('.xa-redPacketMsg').removeClass('none');
+        $('.xa-loadingFrame').addClass('none');
         $('.xa-redPacketMsg').find('.xa-i-msg').html('红包已被抢完啦</p><p>下次早点来哦');
     }
     function showSuccess(){
