--- a/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
+++ b/weapp/termite/static/termite_js/app/component/appkit/redpacketdescription/redpacketdescription.html
@@ -35,7 +35,9 @@
                             <div class="wui-i-title-box xa-i-title-box">
                                 <p class="wui-i-title">活动规则</p>
                             </div>
-                            {{component.model.rules|safe}}
+                            <div class="wui-i-content-box xa-i-content-box">
+                                {{component.model.rules|safe}}
+                            </div>
                         </div>
                     </div>
                 </div>
